<resources>
    <string name="app_name">SimpleHabit</string>
    <string name="start_here">Start Here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="simple_habit">Simple Habit Starter</string>
    <string name="start">Start</string>
    <string name="all_topic">All Topics</string>
    <string name="duration">5 mins</string>
    <string name="new_simple_habit">New on Simple Habit</string>
</resources>
