<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.activities.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_large">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_large">

            <RelativeLayout
                android:id="@+id/start_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/start_here"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_heading_1x" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home"
                    android:background="@drawable/background"
                    android:backgroundTint="@color/colorPrimarySecond">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_small"
                        android:src="@drawable/ic_add_white_24dp" />

                    <TextView
                        android:id="@+id/simple_habit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_xxlarge"
                        android:text="@string/simple_habit"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/margin_large" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/simple_habit"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/margin_xxlarge"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:background="@drawable/background"
                        android:text="@string/start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/duration"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/all_topic_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_here"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:id="@+id/all_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/all_topic"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_heading_1x" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/all_topic_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/all_topic"></android.support.v7.widget.RecyclerView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/all_topic_rl"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:id="@+id/simple_habit_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/new_simple_habit"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_heading_1x" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/simple_habit_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/simple_habit_tv" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/colorBackgroundSecond"
        app:itemTextColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>